--- a/README.html
+++ b/README.html
@@ -357,6 +357,7 @@ display: none;
 <p>Hey! My name is Catalina De Amorrortu. I am a third year here at UCD,
 and I am majoring in Systems and synthetic biology.</p>
 <p>My email is <a href="mailto:cdeamorrortu@ucdavis.edu" class="email">cdeamorrortu@ucdavis.edu</a></p>
+<p>I look forward to learning about data science this quarter!</p>
 </div>
 
 
