--- a/lab1/hw1.html
+++ b/lab1/hw1.html
@@ -9,9 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Your Name Here" />
+<meta name="author" content="Catalina De Amorrortu" />
 
-<meta name="date" content="2026-01-05" />
+<meta name="date" content="2026-01-07" />
 
 <title>Lab 1 Homework</title>
 
@@ -375,8 +375,8 @@ display: none;
 
 
 <h1 class="title toc-ignore">Lab 1 Homework</h1>
-<h4 class="author">Your Name Here</h4>
-<h4 class="date">2026-01-05</h4>
+<h4 class="author">Catalina De Amorrortu</h4>
+<h4 class="date">2026-01-07</h4>
 
 </div>
 
@@ -389,9 +389,15 @@ repository. Your report should be organized, clean, and run free from
 errors. Remember, you must remove the <code>#</code> for any included
 code chunks to run.</p>
 <p><strong>1. Please tell us why you are taking BIS 15L.</strong></p>
+<p>It’s a required class for my major, Systems and Synthetic
+Biology.</p>
 <p><strong>2. Do you have any coding experience? If yes, please tell us
 what languages you have coded in and your level of
 experience.</strong></p>
+<p>I took AP Computer science in high school, and I remember a lot of
+it, but it was java so I don’t know that it will really help me in this
+class. However, I took STA100 last quarter, which coded in R, and I
+think that background will help me here.</p>
 <p><strong>3. Navigate to the <code>datascibiol</code> repository on
 GitHub. Notice that near the bottom there is a description of the
 repository. You want something like this on your repository! It is built
@@ -402,6 +408,7 @@ don’t need to just copy mine. There are lots of examples
 online.</strong></p>
 <p><strong>4. Please put a link to your GitHub repository
 below.</strong></p>
+<p><a href="https://github.com/cdeamorrortu/BIS15L_W26_cdeamorrortu" class="uri">https://github.com/cdeamorrortu/BIS15L_W26_cdeamorrortu</a></p>
 <p><strong>5. Make sure that your repository includes the practice file
 <code>dummy_push</code> from lab 1.2. If you have not done so already,
 please add your name to this file, knit it, and push it to your
