--- a/lab3/lab3_1.html
+++ b/lab3/lab3_1.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2026-01-08" />
+<meta name="date" content="2026-01-13" />
 
 <title>Lab 3.1</title>
 
@@ -1503,7 +1503,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Lab 3.1</h1>
-<h4 class="date">2026-01-08</h4>
+<h4 class="date">2026-01-13</h4>
 
 </div>
 
@@ -1517,6 +1517,10 @@ border-radius: 0px;
 4. Name columns and rows in a data frame.<br />
 5. Select columns and rows and use summary functions.<br />
 6. Write your data frame to a csv file!</p>
+<p>##Working directory</p>
+<pre class="r"><code>getwd() #by default you are in the directory that you first opened.</code></pre>
+<pre><code>## [1] &quot;/Users/catamorr/Desktop/BIS15L_W26_cdeamorrortu/lab3&quot;</code></pre>
+<pre class="r"><code>#setwd()</code></pre>
 </div>
 <div id="load-the-tidyverse" class="section level2">
 <h2>Load the tidyverse</h2>
@@ -1535,6 +1539,7 @@ command below.</p>
 ## ✖ dplyr::filter() masks stats::filter()
 ## ✖ dplyr::lag()    masks stats::lag()
 ## ℹ Use the conflicted package (&lt;http://conflicted.r-lib.org/&gt;) to force all conflicts to become errors</code></pre>
+<pre class="r"><code>#install.packages(&quot;package_name&quot;) &lt;-- to install a new package</code></pre>
 </div>
 <div id="data-structures" class="section level2">
 <h2>Data Structures</h2>
@@ -1549,30 +1554,57 @@ data frames.</p>
 using the <code>c</code> command. The <code>c</code> stands for
 concatenate. We used this command in lab 2.</p>
 <p>A numeric vector.</p>
-<pre class="r"><code>my_vector &lt;- c(10, 20, 30)</code></pre>
+<pre class="r"><code>my_vector &lt;- c(10, 20, 30) #This makes a new vector</code></pre>
 <p>A character vector.</p>
 <pre class="r"><code>days_of_the_week &lt;- c(&quot;Monday&quot;, &quot;Tuesday&quot;, &quot;Wednesday&quot;, &quot;Thursday&quot;, &quot;Friday&quot;, &quot;Saturday&quot;, &quot;Sunday&quot;)</code></pre>
 <p>A convenient trick for creating a vector to play around with is to
 generate a sequence of numbers.</p>
-<pre class="r"><code>my_vector_sequence &lt;- c(1:100)</code></pre>
+<pre class="r"><code>my_vector_sequence &lt;- c(1:100)
+my_vector_sequence</code></pre>
+<pre><code>##   [1]   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17  18
+##  [19]  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36
+##  [37]  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54
+##  [55]  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72
+##  [73]  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90
+##  [91]  91  92  93  94  95  96  97  98  99 100</code></pre>
 </div>
 <div id="identifying-vector-elements" class="section level2">
 <h2>Identifying vector elements</h2>
 <p>We can use <code>[]</code> to pull out elements in a vector. We just
 need to specify their position in the vector; i.e. day 3 is
 Wednesday.</p>
+<pre class="r"><code>days_of_the_week[4]</code></pre>
+<pre><code>## [1] &quot;Thursday&quot;</code></pre>
+<pre class="r"><code>my_vector_sequence[10]</code></pre>
+<pre><code>## [1] 10</code></pre>
 </div>
 <div id="practice" class="section level2">
 <h2>Practice</h2>
 <ol style="list-style-type: decimal">
-<li><p>Use <code>[]</code> to determine which element in
-<code>my_vector_sequence</code> has a value of 15.</p></li>
-<li><p>We can use operators such as &lt;, &gt;, ==, &lt;==, etc. Show
-all values in <code>my_vector_sequence</code> that are less than or
-equal to 10.</p></li>
-<li><p>If you use <code>[]</code> then you only get the values, not the
+<li>Use <code>[]</code> to determine which element in
+<code>my_vector_sequence</code> has a value of 15.</li>
+</ol>
+<pre class="r"><code>my_vector_sequence[15]</code></pre>
+<pre><code>## [1] 15</code></pre>
+<ol start="2" style="list-style-type: decimal">
+<li>We can use operators such as &lt;, &gt;, ==, &lt;==, etc. Show all
+values in <code>my_vector_sequence</code> that are less than or equal to
+10.</li>
+</ol>
+<pre class="r"><code>my_vector_sequence&lt;=10</code></pre>
+<pre><code>##   [1]  TRUE  TRUE  TRUE  TRUE  TRUE  TRUE  TRUE  TRUE  TRUE  TRUE FALSE FALSE
+##  [13] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE
+##  [25] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE
+##  [37] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE
+##  [49] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE
+##  [61] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE
+##  [73] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE
+##  [85] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE
+##  [97] FALSE FALSE FALSE FALSE</code></pre>
+<ol start="3" style="list-style-type: decimal">
+<li>If you use <code>[]</code> then you only get the values, not the
 logical evaluation of the entire vector. Experiment with this by
-adjusting the chunk below.</p></li>
+adjusting the chunk below.</li>
 </ol>
 <pre class="r"><code>my_vector_sequence[my_vector_sequence &lt;= 10]</code></pre>
 <pre><code>##  [1]  1  2  3  4  5  6  7  8  9 10</code></pre>
@@ -1587,23 +1619,42 @@ you how they are structured.</p>
 <p>Let’s build separate vectors that include length (in), weight (oz),
 and sex of three <a href="https://www.audubon.org/field-guide/bird/ruby-throated-hummingbird">ruby-throated
 hummingbirds</a>.</p>
-<pre class="r"><code>Sex &lt;- c(&quot;male&quot;, &quot;female&quot;, &quot;male&quot;)
+<pre class="r"><code>Sex &lt;- c(&quot;male&quot;, &quot;female&quot;, &quot;male&quot;) #called &quot;characters,&quot; not strings!
 Length &lt;- c(3.2, 3.7, 3.4)
 Weight &lt;- c(2.9, 4.0, 3.1)</code></pre>
 <p>Since we work in the tidyverse, we use <code>tibble()</code> to
 create a data frame.</p>
+<pre class="r"><code>hbirds &lt;- tibble(Sex, Length, Weight)</code></pre>
 <p>Notice that not only are the data neat and clean looking, there is
 also information provided about the class of data. <code>dbl</code>
 means that the value is a type of numeric <a href="http://uc-r.github.io/integer_double/">double precision floating
 point</a>.</p>
+<pre class="r"><code>hbirds</code></pre>
+<pre><code>## # A tibble: 3 × 3
+##   Sex    Length Weight
+##   &lt;chr&gt;   &lt;dbl&gt;  &lt;dbl&gt;
+## 1 male      3.2    2.9
+## 2 female    3.7    4  
+## 3 male      3.4    3.1</code></pre>
 <p>What are the column names of our data frame? Notice that R defaulted
 to using the names of our vectors, but we could name them something else
 when creating the data frame, or rename them later.</p>
 <p>What are the dimensions of the <code>hbirds</code> data frame? The
 <code>dim()</code> and <code>str()</code> commands provide this
 information.</p>
+<pre class="r"><code>dim(hbirds)</code></pre>
+<pre><code>## [1] 3 3</code></pre>
+<pre class="r"><code>str(hbirds)</code></pre>
+<pre><code>## tibble [3 × 3] (S3: tbl_df/tbl/data.frame)
+##  $ Sex   : chr [1:3] &quot;male&quot; &quot;female&quot; &quot;male&quot;
+##  $ Length: num [1:3] 3.2 3.7 3.4
+##  $ Weight: num [1:3] 2.9 4 3.1</code></pre>
 <p>Let’s use lowercase names when we create the data frame. We just
 changed to lowercase here, but we could use any names we wish.</p>
+<p>Use lowercase always!</p>
+<pre class="r"><code>names(hbirds)</code></pre>
+<pre><code>## [1] &quot;Sex&quot;    &quot;Length&quot; &quot;Weight&quot;</code></pre>
+<pre class="r"><code>hbirds&lt;-tibble(sex=Sex, length=Length, weight=Weight)</code></pre>
 </div>
 <div id="accessing-data-frame-columns-and-rows" class="section level2">
 <h2>Accessing Data Frame Columns and Rows</h2>
@@ -1611,12 +1662,26 @@ changed to lowercase here, but we could use any names we wish.</p>
 apply to data frames. We use <code>[]</code>. We have two positions
 where the first applies to the rows, and the second to the columns.</p>
 <p>The first row.</p>
+<pre class="r"><code>hbirds[1,]</code></pre>
+<pre><code>## # A tibble: 1 × 3
+##   sex   length weight
+##   &lt;chr&gt;  &lt;dbl&gt;  &lt;dbl&gt;
+## 1 male     3.2    2.9</code></pre>
 <p>The third column.</p>
+<pre class="r"><code>hbirds[,3]</code></pre>
+<pre><code>## # A tibble: 3 × 1
+##   weight
+##    &lt;dbl&gt;
+## 1    2.9
+## 2    4  
+## 3    3.1</code></pre>
 </div>
 <div id="calculations" class="section level2">
 <h2>Calculations</h2>
 <p>We can use the <code>$</code> to access a column (variable) in a data
 frame. Here we calculate the mean length of the hummingbirds.</p>
+<pre class="r"><code>mean(hbirds$length)</code></pre>
+<pre><code>## [1] 3.433333</code></pre>
 </div>
 <div id="writing-data-to-file" class="section level2">
 <h2>Writing Data to File</h2>
@@ -1624,6 +1689,7 @@ frame. Here we calculate the mean length of the hummingbirds.</p>
 There are many ways to save data in R, here we write our data frame to a
 csv file. We use <code>row.names = FALSE</code> to avoid row numbers
 from printing out.</p>
+<pre class="r"><code>write.csv(hbirds, &quot;hbirds_data.csv&quot;, row.names=FALSE)</code></pre>
 </div>
 <div id="thats-it-lets-take-a-break-and-then-move-on-to-part-2" class="section level2">
 <h2>That’s it! Let’s take a break and then move on to part 2!</h2>
